[package]
name = "ivsemu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
# vulkano = "0.24.0" 
# imgui = "0.7.0"

[dependencies.sdl2]
version = "0.34.5"
features = ["bundled", "static-link"]


[dependencies.gl]
git = "https://github.com/bjz/gl-rs"